refact: add suite